abstracted things out to allow the com planner to just use a contact state provider